--- a/Hopetech.html
+++ b/Hopetech.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <meta name="viewport" content="Hope Akpan">
+    <title>My Curriculum Vitae</title>
+    </head>
 <body>
-    
-</body>
+    <h1>Hope Akpan </h1>
+    <p><strong>Full-Stack Developer(Beginner) /Medical Doctor / Ghostwriter</strong></p>
+
+    <p><strong>Email: ndotenyinakpan3@gmail.com<br> 
+    </strong><Location:</strong>Lagos, Nigeria</p>
+    </p>
+    Detailed-0riented and logical beginner Full-Stack Developer trained at <strong>TS Academy</strong>
+    with a strong passion for building functional and user friendly web applications.
+    Dedicated, fast-learning and committed to writing clean and maintainable code.
+    </p>
+</div>
+
+<div class="section">
+    <div
+    class="section-title"></ Technical skills<div>
+        </ul>
+</li><strong>Frontend: </strong>HTML, Javascript (beginner)
+class="section
+</div
+class="section-title">Education & Training</div>
+</p><strong>TS Academy - Full-Stack Software Development (Beginner)</strong><br
+completed: 2026<br>
+-learned frontend and backend development fundamentals. <br>
+
+    <strong></strengths>
+</ul>
+</li>Quick learner</li>
+</li>Logical and analytical thinker</li>
+</li>Detailed-0riented</li>
+
+</div>
+<div class="section">
+    </div
+    class="section-title"> References</div>
+    </p>Available on request. </p>
+</div>
+</body>>
 </html>
