--- a/Hopetech.html
+++ b/Hopetech.html
@@ -6,15 +6,17 @@
     <title>My Curriculum Vitae</title>
     </head>
 <body>
+    
+
     <h1>Hope Akpan </h1>
-    <p><strong>Full-Stack Developer(Beginner) /Medical Doctor / Ghostwriter</strong></p>
+    <ip><strong>Full-Stack Developer(Beginner) /Medical doctor / Ghostwriter</strong></p>
 
     <p><strong>Email: ndotenyinakpan3@gmail.com<br> 
     </strong><Location:</strong>Lagos, Nigeria</p>
     </p>
     Detailed-0riented and logical beginner Full-Stack Developer trained at <strong>TS Academy</strong>
     with a strong passion for building functional and user friendly web applications.
-    Dedicated, fast-learning and committed to writing clean and maintainable code.
+    Dedicated, fast-learnng and committed to writing clean and maintainable code.
     </p>
 </div>
 
