--- a/milestone project.html
+++ b/milestone project.html
@@ -29,5 +29,16 @@
      <hr>
 
    </header>
+   <main>
+    <section>
+        <h1>History of the solar system</h1>
+        <p></p>
+        <video width="500" height="400" controls autoplay loop muted>
+            <source src ="https://res.cloudinary.com/dkyxz2q0y/video/upload/v1767479980/All_the_Planets_Under_the_Same_Sun_t7fso2.mp4"
+                type ="video/mp4">
+                your browser does not support the video tag.
+        </video>
+    </section>
+   </main>
 </body>
 </html
