This is my project

--- a/milestone project.html
+++ b/milestone project.html
@@ -32,13 +32,208 @@
    <main>
     <section>
         <h1>History of the solar system</h1>
-        <p></p>
+        <p>Our solar system is a wondrous place. Countless worlds lie spread across billions of kilometers of space, each dragged around the galaxy by our Sun like an elaborate clockwork.
+
+The smaller, inner planets are rocky, and at least one has life on it. The giant outer planets are shrouded in gas and ice; miniature solar systems in their own right that boast intricate rings and moons. Scattered throughout the solar system are small worlds like lumpy asteroids and comets and complex dwarf planets like Pluto and Ceres.
+
+How did our solar system come to be? Why are these objects where they are now? Here is the series of events that made and shaped our solar system, to the best of our knowledge, pieced together from space missions, Earth-based observations, and complex simulations by scientists trying to figure out our place in space.</p>
         <video width="500" height="400" controls autoplay loop muted>
             <source src ="https://res.cloudinary.com/dkyxz2q0y/video/upload/v1767479980/All_the_Planets_Under_the_Same_Sun_t7fso2.mp4"
                 type ="video/mp4">
                 your browser does not support the video tag.
         </video>
     </section>
-   </main>
-</body>
-</html
+    <hr>
+    <section>
+        <h1>Diagram of the Solar System</h1>
+        <p>Solar system overview showing the Sun, planets, and asteroid belt in a simple labeled layout.</p>
+        <figure>
+            <img src="solar system.jfif" alt="Diagram showing the solar system" style ="width :250px; height =250px;">
+            <figcaption>The Solar system showing order of the planets</figcaption>
+        </figure>
+    </section>
+    <hr>
+    <section>
+        <br>
+        <br>
+        <h2>Data About the planets of the solar system</h2>
+        <br>
+        <br>
+    <figcaption>Data about the planets of our solar systen (planetary facts taken from Nasa)</figcaption>
+
+      <table border ="1">
+            <thead>
+                <tr>
+                <th colspan="2"></th>
+                <th scope="col">Name</th>
+                <th scope="col">Mass (10^24 kg)</th>
+                <th scope="col">Diameter (km)</th>
+                <th scope="col">Density (kg/m<sup>3</sup></th>
+                <th scope="col">Gravity (m/s<sup>2</sup>)</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <!--First row group-->
+                <tr>
+                    <!--Header for this group -->
+                </tr>
+                <th scope="rowgroup"colspan ="2" rowspan="4">Terrestial Planets</th>
+                <td>Mercury</td>
+                    <td>0.330</td>
+                    <td>4878</td>
+                    <td>5427</td>
+                    <td>3.7</td>
+                </tr>
+                <tr>
+                    <td>Venus</td>
+                    <td>0.330</td>
+                    <td>4878</td>
+                    <td>5427</td>
+                    <td>3.7</td>
+                </tr>
+                <tr>
+                    <td>Earth</td>
+                    <td>0.330</td>
+                    <td>4878</td>
+                    <td>5427</td>
+                    <td>3.7</td>
+                    </tr>
+                <tr>
+                    <td>Mars</td>
+                    <td>0.330</td>
+                    <td>4878</td>
+                    <td>5427</td>
+                    <td>3.7</td>
+                    </tr>
+                    <tr>
+                 <th scope="rowgroup" rowspan="4">Jovian planet</th>
+                 <th scope="rowgroup" rowspan="2">Gas Giants</th>
+                    <<td>Jupiter</td>
+                    <td>0.330</td>
+                    <td>4878</td>
+                    <td>5427</td>
+                    <td>3.7</td>
+                </tr>
+                </tr>
+                    <td>Saturn</td>
+                    <td>0.330</td>
+                    <td>4878</td>
+                    <td>5427</td>
+                    <td>3.7</td>
+                </tr>
+                <tr>
+                        <th scope="rowgroup" rowspan="2">Ice Giants</th>
+                        <td>Uranus</td>
+                        <td>0.330</td>
+                        <td>4878</td>
+                        <td>5427</td>
+                        <td>3.7</td>
+                    </tr>
+                    <tr>
+                        <td>Neptune</td>
+                        <td>0.330</td>
+                        <td>4878</td>
+                        <td>5427</td>
+                        <td>3.7</td>
+
+                    </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                <th scope="row"colspan="2">Dwarf Planets</th>
+                        <td>Pluto</td>
+                         <td>0.330</td>
+                        <td>4878</td>
+                        <td>5427</td>
+                        <td>3.7</td>
+                    </tr>
+            </tfoot>
+      </table>
+      <br>
+      <br>
+     <hr>
+    <section>
+        <h2>Subscribe to Our Newsletter</h2>
+        <p>Any information you provide is protected according to the practices described in this statement, 
+            plus any additional restrictions imposed by the source of the data</p>
+            <form action="$" method="post" id="c4">
+                <label for="name">FullName*:</label>
+          <br>
+            <input type="text" id="name" name="fname" placeholder="Fullname" required minlength="10"
+            maxlength="20">
+            <br>
+            <label for="email">Email*:</label>
+            <br>
+            <input type="email" id="email" name="email" placeholder="example@example.com" required>
+            <br>
+            <label for="City">City*:</label>
+            <br>
+            <select id="city" name="city" required>
+                <option value="festac"></option>
+                <option value="ikorudo">ikorudo</option>
+                <option value="yaba">Yaba</option>
+                <option value="Ikeja">Ikeja</option>
+                <option value="Lekki">Lekki</option>
+                <option value="Ajah">Ajah</option>
+            </select>
+            <br>
+              <input type="tel" id="phone" name="phone" placeholder="Pls enter a valid Phone Number"
+              pattern="[0-9]{11}" required><br>
+                <label for="message">message*:</label>
+                <br>
+                <textarea id="message" name="message" rows="5" cols="40"maxlength="100"required></textarea>
+        </textarea>
+                <br>
+                <fieldset>
+                    <legend>How should we contact you?</legend>
+                    <label for="phone radio">
+                    <input type="radio" id="phone radio" name="contact_method"
+                     value="phone"> Phone
+                    </label>
+                    <label for="email radio">
+                    <input type="radio" id="email radio" name="contact_method"
+                     value="email"> Email
+                    </label>
+                    <label for="both">
+                    <input type="radio" id="both" name="contact_method"
+                     value="both"> Both
+                    </label>
+                </fieldset>
+                     <legend>How did you hear about us?</legend>
+                <label for="friend">
+                    <input type="checkbox" id="friend" name="friend" value="friend"> Friend
+                </label>
+                <label for="tsa">
+                    <input type="checkbox" id="tsa" name="tsacademy" value="tsacademy"> TS Academy
+                </label>
+                <label for="others">
+                    <input type="checkbox" id="others" name="others" value="others"> Others
+                </label>
+            </fieldset>
+                    <br>
+                    <button type="submit">submit</button>
+            </form>
+                    <br>
+                    <hr>
+            </section>
+            <footer>
+                <nav>
+                    <h3>About</h3>
+                    <ul>
+                        <li>How it Works</li>
+                        <li>Featured</li>
+                        <li>Partnership</li>
+                        <li>Business Relation</li>
+                    </ul>
+                    <hr style="border:inset;">
+                </nav>
+                  <small>2026 pel Ndoty. All Rights Reserved | P[rivacy & Policy |
+                    Terms & Conditions</small>
+                    </footer>
+
+            </main>
+
+    </body>
+</html>
+                    
