this is my latest msg

--- a/class.html
+++ b/class.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PRACTICAL</title>
 </head>
 <body>
-    >this is my heading</h1>
-    <h2>this is my heading</h2>
-    <h3>this is my heading</h3>
-    <p>this is my heading bbnhbnnnhnnhhhh<br>ghhjfvg
-    <em>i love school</em>>
-    <p>try to eat <mark>bread</mark>in the morning</p>
-    <p> my favourite meal is <del>amala</del>pounded yam</p>
-</body>   
+    <h1 align="center">SIGN IN</h1>
+    <div>
+    <input type="text" placeholder="username">
+    <br>
+    <br>
+    <input type="password" placeholder="password">
+    <br>
+    <h4>Forgot password</h4>
+    
+</body>
 </html>
