--- a/milestone project.html
+++ b/milestone project.html
@@ -38,8 +38,7 @@ The smaller, inner planets are rocky, and at least one has life on it. The giant
 
 How did our solar system come to be? Why are these objects where they are now? Here is the series of events that made and shaped our solar system, to the best of our knowledge, pieced together from space missions, Earth-based observations, and complex simulations by scientists trying to figure out our place in space.</p>
         <video width="500" height="400" controls autoplay loop muted>
-            <source src ="https://res.cloudinary.com/dkyxz2q0y/video/upload/v1767479980/All_the_Planets_Under_the_Same_Sun_t7fso2.mp4"
-                type ="video/mp4">
+            <source src =".
                 your browser does not support the video tag.
         </video>
     </section>
@@ -60,8 +59,7 @@ How did our solar system come to be? Why are these objects where they are now? H
         <br>
         <br>
     <figcaption>Data about the planets of our solar systen (planetary facts taken from Nasa)</figcaption>
-
-      <table border ="1">
+     <table border ="1">
             <thead>
                 <tr>
                 <th colspan="2"></th>
@@ -228,7 +226,7 @@ How did our solar system come to be? Why are these objects where they are now? H
                     </ul>
                     <hr style="border:inset;">
                 </nav>
-                  <small>2026 pel Ndoty. All Rights Reserved | P[rivacy & Policy |
+                  <small>2026 pel Ndoty. All Rights Reserved | Privacy & Policy |
                     Terms & Conditions</small>
                     </footer>
 
